<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.about.Fragment_functionApp"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="SORTEOS"
                    android:layout_marginTop="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_tertiary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Participación en sorteos"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/function_text1"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="25dp">

                    <ImageView
                        android:layout_width="59dp"
                        android:layout_height="31dp"
                        android:src="@drawable/bitcoin"
                        android:contentDescription="@string/content_description" />
                    <ImageView
                        android:layout_width="59dp"
                        android:layout_height="31dp"
                        android:src="@drawable/bitcoin"
                        android:contentDescription="@string/content_description" />
                    <ImageView
                        android:layout_width="59dp"
                        android:layout_height="31dp"
                        android:src="@drawable/bitcoin"
                        android:contentDescription="@string/content_description" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/accentLight2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="WALLET"
                    android:textColor="@color/text_color_tertiary"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Control seguro y rápido"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_text2"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="12sp" />

                <ImageView
                    android:layout_width="294dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:src="@drawable/lightning"
                    android:contentDescription="@string/content_description" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Cobro de premios"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_text3"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="25dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="OPERACIONES"
                    android:textAlignment="center"
                    android:textColor="@color/text_color_tertiary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recibe, solicita y envía bitcoins"
                    android:textAlignment="center"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_text4"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textAlignment="center"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_my_wallet"
                        android:contentDescription="@string/content_description" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_interact"
                        android:contentDescription="@string/content_description" />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_my_wallet"
                        android:contentDescription="@string/content_description" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@color/accentLight4">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="NOTIFICACIONES"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/text_color_tertiary"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Siempre informado"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/function_text5"
                    android:textAlignment="center"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="35dp"
                        android:layout_marginTop="3dp"
                        android:src="@drawable/ic_notification_close"
                        android:contentDescription="@string/content_description"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="33dp"
                        android:src="@drawable/ic_notification_open"
                        android:contentDescription="@string/content_description"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>